# GEngineZ

./: .gitignore  BuildCMake.py  CMakeLists.txt  CMakeSettings.json  README.md
Content/Engine/Shader/: render_tex.hlsl  test.hlsl
Content/Engine/Shader/hlsl/: EditorAxis.hlsl  Empty.hlsl  IMGui.hlsl  PBR.hlsl  Phong.hlsl  SphereSky.hlsl  empty.hlsl  render_tex.hlsl  test.hlsl
Content/Models/: gundam.3DS
Content/Test/: 1001_d_01.tga  WoodCrate01.tga
Content/Test/Mesh/: nanosuit.zmesh  test.model.lua
Content/Test/Nanosuit/: nanosuit.model  nanosuit.zmesh  nanosuit0.material  nanosuit1.material  nanosuit2.material  nanosuit3.material  nanosuit4.material  nanosuit5.material
Content/Test/Other/: gundam.model  gundam.zmesh  horse.material  horse.model  horse.zmesh  horse_b.tga  horse_m.tga  horse_n.tga  man0.material  man0.model  man0.zmesh  man0_b.tga  man0_m.tga  man0_n.tga
Content/Test/Scene/: test.scene
Content/Test/UE/: Floor.zmesh  SM_Chair_2.zmesh  SM_ColorCalibrator_4.zmesh  SM_Elegant_chair_2.zmesh  SM_MatPreviewMesh_01_7.zmesh  SM_Modern_Table_5.zmesh  chair.material  chair.model
Doc/UnrealShaders/Private/: MaterialTemplate.ush  PostProcessCombineLUTs.usf  PostProcessTonemap.usf  TonemapCommon.ush
Engine/Client/Component/: EnvComp.cc  EnvComp.h  Model.h  Primitive.cc  Primitive.h  PrimitiveComp.cc  PrimitiveComp.h
Engine/Client/Director/: AppWindow.h  Director.cc  Director.h  Frame.h  Viewport.cc  Viewport.h  ViewportMain.cc  ViewportMain.h
Engine/Client/Editor/: CameraController.h  EditorUI.cc  EditorUI.h
Engine/Client/EditorUI/: UIManager.cc  UIManager.h
Engine/Client/Entity/: IComponent.cc  IComponent.h  IEntity.h  Transform.h
Engine/Client/Main/: App.cc  App.h  Director.cc  Director.h  Input.cc  Input.h  Viewport.cc  Viewport.h
Engine/Client/Scene/: Camera.cc  Camera.h  CameraController.h  Picker.h  Scene.cc  Scene.h
Engine/Core/: CoreHeader.h
Engine/Core/Common/: Common.h  Debug.h  Define.h  Logger.h  Noncopyable.h  RefCountPtr.h  Singleton.h
Engine/Core/FileSystem/: File.cc  File.h
Engine/Core/Math/: Camera.h  Constant.h  Consts.h  DXMath.h  Function.h  Geometry.h  LinearAlg.h  Matrix.h  Number.h  Vector.h
Engine/Core/Object/: IObject.h
Engine/Core/Platform/: OSHeader.h
Engine/Core/Platform/Win32/: Windows.h
Engine/Core/Scheduler/: Service.h
Engine/Platform/Win32/: Win32App.cc  Win32App.h  Win32Window.cc  Win32Window.h  win32App.cc  win32App.h
Engine/RHI/: RHIConst.h  RHIDevice.cc  RHIDevice.h  RHIResource.h  RHIUtil.h
Engine/RHIDX12/: DX122Texture.cc  DX12Buffer.cc  DX12Buffer.h  DX12Command.cc  DX12Command.h  DX12CommandQueue.cc  DX12CommandQueue.h  DX12Const.h  DX12Descriptor.cc  DX12Descriptor.h  DX12Device.cc  DX12Device.h  DX12Executor.cc  DX12Executor.h  DX12Header.h  DX12Pipeline.cc  DX12Pipeline.h  DX12PipelineState.cc  DX12PipelineState.h  DX12Resource.CC  DX12Resource.cc  DX12Resource.cc2  DX12Resource.h  DX12Shader.cc  DX12Shader.h  DX12Texture.cc  DX12Texture.h  DX12Util.h  DX12View.cc  DX12View.h  DX12Viewport.cc  DX12Viewport.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h
Engine/RHIDX12/DX12/: d3dx12.h
Engine/RHIDX12/Helper/: Helper.h  debug.h
Engine/Render/: Camera.h  Material.cc  Material.h  MaterialMgr.cc  Mesh.cc  Mesh.h  Primitive.h  RenderConst.h  RenderItem.h  RenderOption.h  RenderScene.cc  RenderScene.h  RenderStage.cc  RenderStage.h  RenderTarget.h  RenderUnit.h  RenderUtil.h  Renderer.cc  Renderer.h  SceneCollection.h  Shader.cc  Shader.h  ShaderDesc.h  ShaderManager.h  SubMesh.cc  SubMesh.h
Engine/Render/Pipeline/: BaseScreenStep.h  ForwardMainStep.h  HDRStep.h  IMGuiStage.h  IMGuiStep.cc  IMGuiStep.h  Pipeline.h  RenderScene.h  RenderStage.h  RenderStep.h
Engine/Render/Resource/: RenderResource.h  View.h
Engine/Shader/: test.ggg  test.hlsl
Engine/Startup/Win32/: Win32App.cc  Win32App.h  Win32IMGuiImpl.cc  Win32Input.h  Win32Window.cc  Win32Window.h  imgui_impl_win32.cc  imgui_impl_win32.h
Engine/Util/Image/: Image.cc  Image.h
Engine/Util/Luaconf/: LValue.h  Luaconf.h
Engine/Util/Mesh/: GeoGenerator.cc  MeshGenerator.cc  MeshGenerator.h  ZMeshLoader.h
Engine_/Client/Logic/: ClientDirector.h
Engine_/Client/Scene/: Scene.h
Engine_/Core/Common/: Debug.h
Engine_/Core/Logic/: Director.cc  Director.h
Engine_/Core/Scheduler/: Service.cc
Engine_/Platform/Win32/: Win32Window.h
Program/BuildTool/: BuildTool.py  CMakeTemplate.py
Program/BuildTool/Templates/: Custom.cmake.txt  Executable.cmake.txt  PreDefine.cmake.txt  StaticLib.cmake.txt
Program/Editor/: main.cc
Program/Editor/QtUI/: mainwindow.ui
Program/Editor/Widget/: D3DWidget.cc  D3DWidget.h  MainWindow.cc  MainWindow.h
Program/Game/Win32/: main.cc
Program/HLSLLint/: main.cc
Program/MeshConverter/: main.cc
Program/SLConverter/: main.cc
Shader/: HDRSky.hlsl  PBR.hlsl  Phong.hlsl  SphereSky.hlsl  ToneMapping.hlsl
Shader/include/: CBuffer.hlsl  PBRCommon.hlsl
Test/: TestSched.cc
binary/: z_core.lib
engine/: CMakeLists.txt
engine/Client/Logic/: ClientDirector.cc
engine/Platform/Win32/: win32App.cc
engine/client/: CMakeLists.txt
engine/client/core/: client_director.h
engine/client/startup/: main.cc
engine/core/: CMakeLists.txt
engine/core/Scheduler/: Scheduler.h  Service.h  Worker.h  test.cpp  test.h
engine/core/common/: common.h  debug.h  list.h  logger.h  singleton.h  time.h
engine/core/event/: event_sched.h
engine/core/foundation/: frame.h
engine/core/frame/: frame_sched.h  view.h
engine/core/input/: input_def.h
engine/core/object/: tickable.h
engine/core/sched/: sched.h  service.cc  service.h  worker.h
engine/render/: renderview.h
engine/testcase/: CMakeLists.txt  test_sched.cc
engine_/: CMakeLists.txt
engine_/RHI/: CMakeLists.txt
engine_/client/: CMakeLists.txt
engine_/client/core/: client_director.cc
engine_/client/startup/: main.cc
engine_/client/startup/win32/: win32app.h  window.h
engine_/core/foundation/: director.cc  director.h
engine_/core/sched/: scheduler.h
engine_/render/: renderscene.h  renderview.h
engine_/testcase/: test_sched.cc
(+7 files in other folders)
